--- a/index.html
+++ b/index.html
@@ -77,8 +77,16 @@
             <section class="hot-deal">
 
                 <div class="hot-deal-details">
-                    <h3 class="hot-deal-title">Hot Deal ! Sale Up To 25% Off</h3>
+                    <h3 class="hot-deal-title">Hot Deal ! Sale Up To 25% <span style="color: #E55473;">Off</span></h3>
+                    <p class="hot-deal-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+
+                   <div class="btn-container">
+                    <button class="hot-deal-btn btn-primary">Sign Up</button>
+                   </div>
                     
+                </div>
+                <div class="hot-deal-img">
+                    <img src="/image/pngwing 8.png" alt="hot-deal-image">
                 </div>
 
 
