--- a/index.html
+++ b/index.html
@@ -92,9 +92,44 @@
 
             </section>
 
+
+
+            <!-- ---------------------------instagram section----------------------- -->
+
+            <section class="instagram">
+
+                <h3 class="instagram-title">Instagram</h3>
+                <p class="description">It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
+
+                <div class="img-container">
+                    <img src="/image/Flower 01.png" alt="instagram-img-1" class="instagram-img">
+                    <img src="/image/Rectangle 4.png" alt="instagram-img-2 " class="instagram-img">
+                    <img src="/image/Rectangle 5.png" alt="instagram-img-3" class="instagram-img">
+                    <img src="/image/Rectangle 6.png" alt="instagram-img-4" class="instagram-img">
+                </div>
+            </section>
+
+            <!-- --------------------------------latest deal section----------------- -->
+
+            <section class="latest-deal">
+
+                <h3 class="latest-deal-title">Get The Latest Deals</h3>
+                <p class="latest-deal-cotation">$30 coupon for first shopping</p>
+                <input type="text" name="" id="" placeholder="Enter your email here..">
+                <button class="latest-deal-btn btn-primary">Subscribe</button>
+
+
+            </section>
+
     </main>
 
     <footer>
+
+        <h3 class="footer-main-text"> <span style="color: #E55473;">Flower</span> <span style="color: white;">Shop</span></h3>
+
+        <p class="footer-details">It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
+
+        <p class="copy-right">@2020-2023, FlowerShop.com. All rights reserved. </p>
 
 
     </footer>
