img name edited

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <div class="tree-container">
                     <div class="tree-item">
                         <div style="background-color: rgba(167, 33, 98, 0.15);" class="tree-img-container">
-                            <img src="/image/pink.png" alt="pink flower tree" class="tree-img">
+                            <img src="image/pink.png" alt="pink flower tree" class="tree-img">
                         </div>
                         <p class="tree-name">Pink flower tree-container</p>
                     </div>
@@ -53,13 +53,13 @@
                         <div style="background: rgba(5, 151, 160, 0.15);
                         
                         " class="tree-img-container">
-                            <img src="/image/merun.png" alt="Merun flower tree" class="tree-img">
+                            <img src="image/merun.png" alt="Merun flower tree" class="tree-img">
                         </div>
                         <p class="tree-name">Merun flower tree</p>
                     </div>
                     <div class="tree-item">
                         <div class="tree-img-container " style="background: rgba(71, 125, 17, 0.15);">
-                            <img src="/image/yellow.png" alt=" yellow flower tree" class="tree-img">
+                            <img src="image/yellow.png" alt=" yellow flower tree" class="tree-img">
                         </div>
                         <p class="tree-name">yellow flower tree</p>
                     </div>
@@ -86,7 +86,7 @@
                     
                 </div>
                 <div class="hot-deal-img">
-                    <img src="/image/hot_deals.png" alt="hot-deal-image">
+                    <img src="image/hot_deals.png" alt="hot-deal-image">
                 </div>
 
 
@@ -102,10 +102,10 @@
                 <p class="description">It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
 
                 <div class="img-container">
-                    <img src="/image/instagram_one.png" alt="instagram-img-1" class="instagram-img">
-                    <img src="/image/instagram_two.png" alt="instagram-img-2 " class="instagram-img">
-                    <img src="/image/instagram_three.png" alt="instagram-img-3" class="instagram-img">
-                    <img src="/image/instagram_four.png" alt="instagram-img-4" class="instagram-img">
+                    <img src="image/instagram_one.png" alt="instagram-img-1" class="instagram-img">
+                    <img src="image/instagram_two.png" alt="instagram-img-2 " class="instagram-img">
+                    <img src="image/instagram_three.png" alt="instagram-img-3" class="instagram-img">
+                    <img src="image/instagram_four.png" alt="instagram-img-4" class="instagram-img">
                 </div>
             </section>
 
