--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <section class="latest-deal">
 
                 <h3 class="latest-deal-title">Get The Latest Deals</h3>
-                <p class="latest-deal-cotation">$30 coupon for first shopping</p>
+                <p class="latest-deal-quotation">$30 coupon for first shopping</p>
                 <input type="text" name="" id="" placeholder="Enter your email here..">
                 <button class="latest-deal-btn btn-primary">Subscribe</button>
 
